Pointed to dev plan roadmap

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -41,6 +41,7 @@
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
 October 25 & Kyle, Kartik, Mathew, Oleg & Rev 0\\
+April 1 & Kyle & Rev 1\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -403,6 +404,7 @@ before exposing the system to a large pool of users. These requirements are rela
     \textbf{NFR-SE2, NFR-SE3}). In the event of a system failure, we would also like to ensure that error messages are helpful to users (
       \textbf{NFR-SE4}).
 
+      Please also see section 8 of our \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{Development Plan.}
 \newpage{}
 
 \section*{Appendix --- Reflection}
